--- a/.github/workflows/Scan report.yml
+++ b/.github/workflows/Scan report.yml
@@ -1,16 +1,16 @@
-name: React Vulnerability Scan
+name: Code Security Scan
 
 on:
   workflow_dispatch:
 
 jobs:
-  scan-vulnerabilities:
-    name: Scan for Vulnerabilities
-    runs-on: ubuntu-latest
+  scan:
+    name: Audit and Lint React App
+    runs-on: ubuntu-latest  # Or your self-hosted runner if needed
 
     steps:
-      - name: Checkout Repository
-        uses: actions/upload-artifact@v3.1.3
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -20,18 +20,16 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
-      - name: Run npm audit and generate report
+      - name: Run npm audit (Vulnerability Scan)
         run: |
-          echo "## React Project Vulnerability Report" > vulnerability-report.md
-          echo "" >> vulnerability-report.md
-          echo "### npm audit results" >> vulnerability-report.md
-          echo '```' >> vulnerability-report.md
-          npm audit --json >> audit.json || true
-          cat audit.json | jq '.' >> vulnerability-report.md
-          echo '```' >> vulnerability-report.md
+          echo "=== npm audit report ==="
+          npm audit || true  # Allow vulnerabilities to be logged without failing job
 
-      - name: Upload Vulnerability Report
-        uses: actions/upload-artifact@v3
-        with:
-          name: vulnerability-report
-          path: vulnerability-report.md
+      - name: Run ESLint (if available)
+        run: |
+          if [ -f eslint.config.js ] || [ -f .eslintrc.js ]; then
+            echo "=== ESLint Report ==="
+            npx eslint . || true
+          else
+            echo "No ESLint config found, skipping lint check."
+          fi
