--- a/.github/workflows/Scan report.yml
+++ b/.github/workflows/Scan report.yml
@@ -3,7 +3,7 @@ name: Deploy React App to EC2
 on:
   push:
     branches:
-      - main  # or change to your deployment branch
+      - main  # Change if your deployment branch is different
 
 jobs:
   build-and-deploy:
@@ -30,5 +30,7 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ec2-user
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: "dist/*"  # or "build/*" for Create React App
-          target: "/var/www/html"
+          source: "dist/*"             # ✅ Sends only the contents of dist/
+          target: "/var/www/html"      # ✅ This is where Nginx serves files from
+          rm: true                     # ✅ Clean up after upload
+          strip_components: 1          # ✅ Avoid nesting dist/ in target
